--- a/package.json
+++ b/package.json
@@ -6,17 +6,24 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["photo", "photos", "lightgallery", "gallery", "photogallery"],
+  "keywords": [
+    "photo",
+    "photos",
+    "lightgallery",
+    "gallery",
+    "photogallery"
+  ],
   "author": "Tim Mendoza <timmydoza@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "concurrent-transform": "^1.0.0",
-    "express": "^4.14.0",
     "gulp-debug": "^2.1.2",
     "gulp-image-resize": "^0.8.0",
     "gulp-rename": "^1.2.2",
     "lightgallery": "^1.2.21",
     "lodash": "^4.13.1",
-    "mustache": "^2.2.1"
+    "mustache": "^2.2.1",
+    "router": "^1.1.4",
+    "serve-static": "^1.11.1"
   }
 }
