--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-photo-gallery",
-  "version": "0.0.2",
-  "description": "",
+  "version": "0.0.3",
+  "description": "Express middleware which serves a stylish and responsive photo gallery using jQuery lightgallery.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -25,5 +25,10 @@
     "mustache": "^2.2.1",
     "router": "^1.1.4",
     "serve-static": "^1.11.1"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
+    "mocha": "^2.5.3"
   }
 }
