--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "serve-static": "^1.11.1"
   },
   "devDependencies": {
+    "async": "^2.0.0-rc.6",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "express": "^4.14.0",
