--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   ],
   "author": "timmydoza <timmydoza@gmail.com>",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/timmydoza/express-photo-gallery"
+    "type": "git",
+    "url": "https://github.com/timmydoza/express-photo-gallery"
   },
   "license": "MIT",
   "dependencies": {
@@ -24,8 +24,10 @@
     "lightgallery": "^1.2.21",
     "lodash": "^4.13.1",
     "mustache": "^2.2.1",
+    "request": "^2.75.0",
     "router": "^1.1.4",
-    "serve-static": "^1.11.1"
+    "serve-static": "^1.11.1",
+    "xml2js": "^0.4.17"
   },
   "devDependencies": {
     "async": "^2.0.0-rc.6",
