--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "deep-equal": "^1.0.1",
     "directory-exists": "^1.0.0",
     "lightgallery": "^1.2.21",
     "lodash": "^4.13.1",
