--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-photo-gallery",
-  "version": "1.0.5",
+  "version": "1.0.7",
   "description": "Express middleware which serves a stylish and responsive photo gallery using jQuery lightgallery.",
   "main": "index.js",
   "scripts": {
@@ -22,6 +22,9 @@
   "dependencies": {
     "deep-equal": "^1.0.1",
     "directory-exists": "^1.0.0",
+    "lg-fullscreen": "^1.0.1",
+    "lg-thumbnail": "^1.0.1",
+    "lg-zoom": "^1.0.1",
     "lightgallery": "^1.3.5",
     "lodash": "^4.13.1",
     "mustache": "^2.2.1",
