--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-photo-gallery",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Express middleware which serves a stylish and responsive photo gallery using jQuery lightgallery.",
   "main": "index.js",
   "scripts": {
@@ -21,22 +21,22 @@
   "license": "GPL-3.0",
   "dependencies": {
     "deep-equal": "^1.0.1",
-    "directory-exists": "^1.0.0",
+    "directory-exists": "^1.0.1",
     "lg-fullscreen": "^1.0.1",
-    "lg-thumbnail": "^1.0.1",
-    "lg-zoom": "^1.0.1",
-    "lightgallery": "^1.3.5",
-    "mustache": "^2.2.1",
-    "request": "^2.75.0",
-    "router": "^1.1.4",
-    "serve-static": "^1.11.1",
+    "lg-thumbnail": "^1.0.3",
+    "lg-zoom": "^1.0.4",
+    "lightgallery": "^1.3.9",
+    "mustache": "^2.3.0",
+    "request": "^2.81.0",
+    "router": "^1.3.0",
+    "serve-static": "^1.12.1",
     "xml2js": "^0.4.17"
   },
   "devDependencies": {
-    "async": "^2.0.0-rc.6",
+    "async": "^2.3.0",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
-    "express": "^4.14.0",
-    "mocha": "^2.5.3"
+    "express": "^4.15.2",
+    "mocha": "^3.2.0"
   }
 }
