--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-photo-gallery",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Express middleware which serves a stylish and responsive photo gallery using jQuery lightgallery.",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,7 @@
     "lg-zoom": "^1.0.4",
     "lightgallery": "^1.3.9",
     "mustache": "^2.3.0",
+    "object-assign": "^4.1.1",
     "request": "^2.81.0",
     "router": "^1.3.0",
     "serve-static": "^1.12.1",
